# conan-templates

./: README.md
cmake_c_exe/: .nvim-dap.lua  CMakeLists.txt  conanfile.py
cmake_c_exe/conf/: version.h.in
cmake_c_exe/src/: main.c
templates/command/new/autotools_recipe/all/: conanfile.py
templates/command/new/c_cli/: .gitignore  CMakeLists.txt
templates/command/new/c_cli/test/: test-main.c
templates/command/new/cmake_c_exe/: .nvim-dap.lua  CMakeLists.txt  Taskfile.yml  conanfile.py
templates/command/new/cmake_c_exe/src/: main.c
templates/command/new/cmake_recipe/all/: conanfile.py
